--- a/LiveTrade/templates/item-medium.pug
+++ b/LiveTrade/templates/item-medium.pug
@@ -7,9 +7,8 @@
       td.mods
         table
           tr
-            td #{title}
-          tr
             td
+              | #{title}
               ul
                 if mods.implicit.trim() != ''
                   li.implicit #{mods.implicit}
@@ -17,8 +16,3 @@
                   li.explixit #{explicit}
                 each craft in mods.crafted
                   li.crafted #{craft}
-      td.properties
-        ul
-          each property,name in properties
-            if property.trim() != ''
-              li.property #{name}:#{property}
