Remove the dependency on ffi and replaced it with a custom cpp module

--- a/LiveTrade/templates/item-big.pug
+++ b/LiveTrade/templates/item-big.pug
@@ -6,14 +6,19 @@
       td.mods
         table
           tr
-            td #{title}
+            td
+              if corrupted
+                b.corrupted
+              | #{title}
           tr
             td
               ul
                 if mods.implicit.trim() != ''
                   li.implicit #{mods.implicit}
+                if mods.enchant.trim() != ''
+                  li.enchant #{mods.enchant}
                 each explicit in mods.explicits
-                  li.explixit #{explicit}
+                  li.explicit #{explicit}
                 each craft in mods.crafted
                   li.crafted #{craft}
       td.properties
